--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -3,7 +3,7 @@ server {
   listen [::]:80 default_server ipv6only=on;
 
   server_name _;
-  root /var/www;
+  root /var/www/dist;
   index index.html index.htm;
 
   location / {
