--- a/package.json
+++ b/package.json
@@ -29,40 +29,37 @@
     "dev": "webpack-dev-server --mode development --open --watch",
     "build": "webpack --mode production"
   },
-  "dependencies": {
-    "bulma": "^0.7.1",
-    "bulma-badge": "^2.0.0",
-    "bulma-calendar": "^5.0.3",
-    "chart.js": "^2.7.2",
-    "dotenv-webpack": "^1.6.0",
-    "dropzone": "^5.4.0",
-    "font-awesome": "^4.7.0",
-    "fontawesome": "^4.7.2",
-    "i18next": "^8.4.2",
-    "luminous-lightbox": "^2.2.1",
-    "mithril": "^1.1.6",
-    "moment": "^2.22.2",
-    "pace-progress": "^1.0.2",
-    "tokenfield": "^0.11.0",
-    "urijs": "^1.19.0"
-  },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
-    "clean-webpack-plugin": "^0.1.19",
-    "css-loader": "^1.0.0",
-    "eslint": "^5.4.0",
-    "eslint-config-google": "^0.9.1",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "@fortawesome/fontawesome-free": "^5.6.3",
+    "babel-loader": "^8.0.5",
+    "bulma": "^0.7.2",
+    "bulma-badge": "^2.0.0",
+    "bulma-calendar": "^5.0.5",
+    "chart.js": "^2.7.3",
+    "clean-webpack-plugin": "^1.0.0",
+    "css-loader": "^2.1.0",
+    "dotenv-webpack": "^1.6.0",
+    "dropzone": "^5.5.1",
+    "eslint": "^5.12.0",
+    "eslint-config-google": "^0.11.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "^2.0.0",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.9.3",
+    "i18next": "^13.1.2",
+    "luminous-lightbox": "^2.3.2",
+    "mithril": "^1.1.6",
+    "moment": "^2.23.0",
+    "node-sass": "^4.11.0",
+    "pace-progress": "^1.0.2",
     "sass-loader": "^7.1.0",
     "serviceworker-webpack-plugin": "^1.0.1",
-    "style-loader": "^0.22.1",
-    "webpack": "^4.17.1",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.11"
+    "style-loader": "^0.23.1",
+    "tokenfield": "^1.1.1",
+    "urijs": "^1.19.1",
+    "webpack": "^4.28.4",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.1.14"
   }
 }
