--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -9,4 +9,16 @@ server {
   location / {
     try_files $uri $uri/ /index.html =404;
   }
+
+  location ~* \.(?:jpg|jpeg|gif|png|ico)$ {
+      expires 1M;
+      access_log off;
+      add_header Cache-Control "public";
+  }
+
+  location ~* \.(?:css|js)$ {
+      expires 1y;
+      access_log off;
+      add_header Cache-Control "public";
+  }
 }
