Added community menu item to navbar.

--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,6 @@ ROUTE_ROOT=/
 DEFAULT_LANGUAGE=en
 EN_URL=https://www.doujinshi.info
 JA_URL=https://ja.doujinshi.info
+DISCORD_URL=https://discord.gg/GX2VKug
 PUSH_KEY=
 GA_ID=
