--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "url": "https://github.com/doujinshi-info/frontend/issues"
   },
   "main": "webpack.config.js",
-  "author": "Kisuka <kisuka@kisuka.com> (https://www.kisuka.com)",
+  "author": "Kisuka (https://www.kisuka.com)",
   "license": "gpl-3.0",
   "scripts": {
     "lint": "eslint \"src/js/**/*.js\"",
@@ -39,10 +39,11 @@
     "bulma-calendar": "^6.0.1",
     "chart.js": "^2.7.3",
     "clean-webpack-plugin": "^1.0.1",
+    "core-js": "^2.6.5",
     "css-loader": "^2.1.0",
     "dotenv-webpack": "^1.7.0",
     "dropzone": "^5.5.1",
-    "eslint": "^5.14.1",
+    "eslint": "^5.16.0",
     "eslint-config-google": "^0.11.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^3.0.1",
@@ -51,12 +52,12 @@
     "luminous-lightbox": "^2.3.2",
     "mithril": "^1.1.6",
     "moment": "^2.24.0",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.12.0",
     "pace-progress": "^1.0.2",
     "sass-loader": "^7.1.0",
     "serviceworker-webpack-plugin": "^1.0.1",
     "style-loader": "^0.23.1",
-    "tokenfield": "^1.2.1",
+    "tokenfield": "^1.2.2",
     "urijs": "^1.19.1",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
