Some accessibility fixes.

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -21,4 +21,11 @@ server {
       access_log off;
       add_header Cache-Control "public";
   }
+
+  location = /robots.txt {
+      access_log off;
+      log_not_found off;
+      add_header Content-Type text/plain;
+      return 200 "User-agent: *\nDisallow:\n";
+  }
 }
