--- a/package.json
+++ b/package.json
@@ -31,13 +31,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.3.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.3.1",
-    "@fortawesome/fontawesome-free": "^5.7.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-regular-svg-icons": "^5.9.0",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "babel-loader": "^8.0.5",
     "bulma": "^0.7.4",
     "bulma-badge": "^2.0.0",
-    "bulma-calendar": "^6.0.1",
-    "chart.js": "^2.7.3",
+    "chart.js": "^2.8.0",
     "clean-webpack-plugin": "^1.0.1",
     "core-js": "^2.6.5",
     "css-loader": "^2.1.0",
@@ -47,11 +49,11 @@
     "eslint-config-google": "^0.11.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^3.0.1",
+    "flatpickr": "^4.6.1",
     "html-webpack-plugin": "^3.2.0",
     "i18next": "^13.1.5",
     "luminous-lightbox": "^2.3.2",
     "mithril": "^1.1.6",
-    "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "pace-progress": "^1.0.2",
     "sass-loader": "^7.1.0",
